crates/keron-lang/tests/corpus/errors/check/comparison_boolean_ordering.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `<` requires `Int`, `Double`, or `String` operands, found `Boolean` and `Boolean`
  --> 1:9
  |
1 | val r = true < false
  |         ^^^^^^^^^^^^
